# fips

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml  publish.yml  quality.yml  tests.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  quickstart.rst  terminology.rst  usage.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/api/: core.rst  estimators.rst  flux.rst  index.rst  inverse.rst  pipeline.rst  utilities.rst
docs/examples/: flux_regional.ipynb  gravity_2d.ipynb  index.rst
docs/reference/: blocks.rst  covariance.rst  estimators.rst  index.rst  inverse.rst  multiblocks.rst  operators.rst  pipeline.rst
docs/reference/problems/: flux.rst  index.rst
docs/reference/utilities/: aggregators.rst  filters.rst  index.rst  indexes.rst  kernels.rst  metrics.rst  visualization.rst
examples/: flux_regional.ipynb  gravity_2d.ipynb
fips/: __init__.py  core.py  estimators.py  utils.py
fips/problems/flux/: problem.py  utils.py
src/fips/: __init__.py  aggregators.py  base.py  converters.py  core.py  correlation.py  covariance.py  estimators.py  filters.py  indexes.py  indices.py  interfaces.py  kernels.py  matrices.py  matrix.py  metrics.py  mixins.py  operator.py  operators.py  parallel.py  pipeline.py  plotting.py  problem.py  serialization.py  spacetime.py  structures.py  utils.py  vector.py  vectors.py  visualization.py
src/fips/problems/: __init__.py
src/fips/problems/flux/: __init__.py  covariances.py  pipeline.py  plotter.py  plotting.py  problem.py  transport.py  utils.py  visualization.py
src/fips/problems/flux/transport/: __init__.py  builder.py  footprint.py  simulation.py
src/fips/problems/flux/transport/stilt/: __init__.py  builder.py  errors.py  footprint.py  simulation.py
src/fips/problems/utils/: __init__.py  spacetime.py
src/fips/utils/: parallel.py  spacetime.py
tests/: __init__.py  conftest.py  generate_data.py  test_aggregators.py  test_base.py  test_converters.py  test_correlation.py  test_covariance.py  test_covariance_building.py  test_estimators.py  test_filters.py  test_flux_problem.py  test_indexes.py  test_indices.py  test_interfaces.py  test_kernels.py  test_matrices.py  test_metrics.py  test_operators.py  test_pkg.py  test_plotting.py  test_problem.py  test_serialization.py  test_spacetime.py  test_sparse.py  test_stilt_builder.py  test_vectors.py  test_visualization.py
tests/data/: __init__.py  flux.py  generic.py  utils.py
