[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fips"
version = "0.1.0b1"
description = "Flexible Inverse Problem Solver (FIPS)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "James Mineau", email = "jameskmineau@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "joblib>=1.4.0",
    "numpy>=1.22.0",
    "pandas>=2.0.0",  # need pandas 2.0 for upgraded Index object
    "scipy>=1.8.0",
    "typing-extensions>=4.0.0",
    "xarray>=2022.3.0",
]

[project.optional-dependencies]
flux = [
    "cartopy>=0.24.0",  # numpy 2.0 support
    "h5py>=3.11.0",  # numpy 2.0 support
    "matplotlib>=3.6.0",
    "stilt @ git+https://github.com/jmineau/PYSTILT",
]

[dependency-groups]
dev = [
    "fips[flux]",
    "docstr-coverage>=2.0.0",
    "ipykernel>=7.2.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "pre-commit>=3.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "pyright[nodejs]>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/jmineau/fips"
Documentation = "https://jmineau.github.io/fips/"
Repository = "https://github.com/jmineau/fips"
Issues = "https://github.com/jmineau/fips/issues"

[tool.coverage.run]
source = ["src/fips"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:numpy.core.multiarray is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long, handled by formatter
    "D200",  # One-line docstring should fit on one line with quotes
    "D212",  # Multi-line docstring summary should start at the first line
    "D400", # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.isort]
known-first-party = ["fips"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fips" = ["py.typed"]
